[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Village/VillageUI.gd" type="Script" id=1]
[ext_resource path="res://kenny_iso_td/iso_td/towerDefense_001_0.png" type="Texture" id=2]
[ext_resource path="res://kenny_iso_td/iso_td/towerDefense_001_1.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Village/Build.gd" type="Script" id=4]
[ext_resource path="res://kenny_iso_td/iso_td/towerDefense_119_1.png" type="Texture" id=5]
[ext_resource path="res://kenny_iso_td/iso_td/towerDefense_119_3.png" type="Texture" id=6]
[ext_resource path="res://kenny_iso_td/iso_td/towerDefense_004_0.png" type="Texture" id=7]
[ext_resource path="res://kenny_iso_td/iso_td/towerDefense_004_2.png" type="Texture" id=8]
[ext_resource path="res://Kenney_Roguelike_Pack/villager m1 modern.png" type="Texture" id=9]

[node name="VillageUI" type="Node2D"]

script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -2.0
margin_top = 595.0
margin_right = -2.0
margin_bottom = 595.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Build" type="TouchScreenButton" parent="HBoxContainer" index="0"]

normal = ExtResource( 2 )
pressed = ExtResource( 3 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Resources" type="TouchScreenButton" parent="HBoxContainer" index="1"]

position = Vector2( 165.145, 16.1869 )
scale = Vector2( 0.791624, 0.791623 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Yggdrasil_button" type="TouchScreenButton" parent="HBoxContainer" index="2"]

position = Vector2( 322.769, 17.3597 )
scale = Vector2( 0.786821, 0.786821 )
normal = ExtResource( 7 )
pressed = ExtResource( 8 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Villager_button" type="TouchScreenButton" parent="HBoxContainer" index="3"]

position = Vector2( 467.646, 4.655 )
scale = Vector2( 0.199095, 0.199095 )
normal = ExtResource( 9 )
pressed = ExtResource( 9 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[connection signal="pressed" from="HBoxContainer/Build" to="." method="_on_Build_pressed"]

[connection signal="pressed" from="HBoxContainer/Resources" to="." method="_on_Resources_pressed"]

[connection signal="pressed" from="HBoxContainer/Yggdrasil_button" to="." method="_on_Yggdrasil_button_pressed"]

[connection signal="pressed" from="HBoxContainer/Villager_button" to="." method="_on_Villager_button_pressed"]


